--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "sass-loader": "^7.1.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
-    "dev": "webpack --watch",
+    "dev": "webpack-dev-server",
     "prod": "webpack --mode=production"
   },
   "repository": {
