--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Landing page dedicated to veterans of the Great Patriotic War",
   "main": "./js/main.js",
   "dependencies": {
-    "animate.css": "^3.7.0",
+    "animate.css": "^3.7.0"
+  },
+  "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
